<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="4dp">

    <CheckBox
        android:id="@+id/checkboxOverlayPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_checkbox_overlay_permission" />

    <CheckBox
        android:id="@+id/checkboxMonitoring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/config_checkbox_monitoring" />

    <CheckBox
        android:id="@+id/checkboxFloatingOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/config_checkbox_floating_overlay" />

</LinearLayout>
